@startuml database-er-diagram
title Database Entity Relationship Diagram

' Hide the circle icons for methods/fields
hide circle

' Modern color palette and styling
skinparam class {
    BackgroundColor White
    ArrowColor #2C3E50
    BorderColor #2C3E50
    HeaderBackgroundColor #ECF0F1
}

skinparam roundcorner 10
skinparam shadowing false

entity "users" as users {
    *id : VARCHAR(64) <<PK>>
    --
    *username : VARCHAR(255) <<UNIQUE>>
    *email : VARCHAR(255) <<UNIQUE>>
    *password : VARCHAR(255)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "tasks" as tasks {
    *id : INT <<PK>> <<AUTO_INCREMENT>>
    --
    *user_id : VARCHAR(64) <<FK>>
    title : VARCHAR(255)
    description : TEXT
    is_done : TINYINT(1) <<DEFAULT 0>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "refresh_tokens" as refresh_tokens {
    *id : INT <<PK>> <<AUTO_INCREMENT>> (Implicit)
    --
    *user_id : VARCHAR(64) <<FK>>
    *token_hash : VARCHAR(64) <<UNIQUE>>
    *expires_at : INTEGER
    created_at : TIMESTAMP
}

users ||..o{ tasks : "has many"
users ||..o{ refresh_tokens : "has many"
@enduml
